# Raven

./: .gitignore  RAVEN_project_plan.md  RAVEN_project_plan.original.md  README.md  pyproject.toml
.github/workflows/: ci.yml
raven/: config.py  main.py  source.py
raven/llm/: client.py  prompts.py
raven/parser/: ast_parser.py
raven/reporter/: cli_reporter.py  html_reporter.py  json_reporter.py
raven/rules/: engine.py  interproc.py  secret_rule.py  taint.py
raven/rules/definitions/: command_injection.yml  hardcoded_secret.yml  sql_injection.yml  unsafe_eval.yml
tests/: test_cmd_rule.py  test_engine.py  test_entropy.py  test_eval_rule.py  test_html_reporter.py  test_interproc.py  test_javascript.py  test_json_reporter.py  test_llm.py  test_merge.py  test_secret_rule.py  test_source.py  test_sqli_rule.py  test_taint.py
tests/fixtures/: vuln_cmd.py  vuln_eval.py  vuln_secret.js  vuln_secret.py  vuln_sqli.py
