[project]
name = "raven"
version = "0.1.0"
description = "RAVEN — Risk Analysis & Vulnerability Examination Node：本地 LLM 驅動的靜態漏洞掃描器"
requires-python = ">=3.11"

# M1 最小依賴。其餘（pyyaml/rich/openai/gitpython/jinja2）依里程碑需要再加（YAGNI）。
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "click>=8.0",
    "pyyaml>=6.0",        # M2：載入 YAML 規則定義
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
raven = "raven.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
